--- a/index.html
+++ b/index.html
@@ -1,211 +1,70 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <title>Pumba — Gaming × Business</title>
-  <meta name="description" content="Pumba (Iqbal Hossain) — gaming edits, content creation, and business collaborations." />
-
-  <link rel="icon" type="image/png" href="./favicon.png" />
-
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
-
-  <style>
-    :root{
-      --bg:#07090c;
-      --panel:rgba(10,12,16,.74);
-      --panel2:rgba(10,12,16,.58);
-      --line:rgba(255,255,255,.1);
-      --text:rgba(255,255,255,.92);
-      --muted:rgba(255,255,255,.72);
-      --accent:#d11f1f;
-      --radius:20px;
-      --max:1120px;
-    }
-
-    *{box-sizing:border-box}
-    body{
-      margin:0;
-      font-family:Inter,system-ui,sans-serif;
-      color:var(--text);
-      background:var(--bg);
-    }
-
-    body::before{
-      content:"";
-      position:fixed;
-      inset:0;
-      background:url("./banner.png") center/cover no-repeat;
-      z-index:-2;
-    }
-    body::after{
-      content:"";
-      position:fixed;
-      inset:0;
-      background:linear-gradient(180deg,rgba(0,0,0,.78),rgba(0,0,0,.66));
-      z-index:-1;
-    }
-
-    .wrap{max-width:var(--max);margin:auto;padding:20px}
-
-    .top{
-      display:flex;justify-content:space-between;align-items:center;
-      padding:12px 16px;border-radius:999px;
-      background:rgba(0,0,0,.4);
-      border:1px solid var(--line);
-      backdrop-filter:blur(8px);
-    }
-
-    .brand{display:flex;gap:12px;align-items:center}
-    .brand img{width:36px;height:36px;border-radius:50%}
-
-    nav a{margin-left:12px;color:var(--muted)}
-
-    .hero{
-      margin-top:18px;
-      border-radius:var(--radius);
-      border:1px solid var(--line);
-      background:linear-gradient(180deg,var(--panel),var(--panel2));
-    }
-
-    .heroInner{
-      padding:26px;
-      display:grid;
-      grid-template-columns:1.25fr .75fr;
-      gap:18px;
-    }
-
-    h1{font-size:clamp(2.2rem,5vw,3.3rem)}
-    .accent{color:var(--accent)}
-
-    .chips{display:flex;gap:10px;flex-wrap:wrap}
-    .chip{padding:8px 12px;border-radius:999px;border:1px solid var(--line)}
-
-    .actions{margin-top:16px;display:flex;gap:10px}
-    .btn{
-      padding:12px 16px;border-radius:999px;
-      border:1px solid var(--line);
-      font-weight:700;
-      display:flex;gap:8px;align-items:center;
-    }
-    .btn.primary{background:#d11f1f}
-
-    /* ICON SYSTEM */
-    .icon{
-      width:18px;height:18px;
-      display:inline-flex;
-      transition:.25s;
-    }
-    .icon svg{width:100%;height:100%}
-
-    .youtube:hover{color:#ff2b2b}
-    .spotify:hover{color:#1ed760}
-    .instagram:hover{color:#e1306c}
-    .facebook:hover{color:#1877f2}
-    .discord:hover{color:#5865f2}
-
-    .linkRow{
-      display:flex;justify-content:space-between;
-      align-items:center;padding:12px;
-      border-radius:14px;border:1px solid var(--line);
-      transition:.25s;
-    }
-    .linkRow:hover{background:rgba(255,255,255,.05)}
-
-    .copy{cursor:pointer}
-
-    footer{text-align:center;margin-top:20px;opacity:.7}
-    @media(max-width:900px){.heroInner{grid-template-columns:1fr}}
-  </style>
-</head>
-
-<body>
-
-<!-- SVG ICON DEFINITIONS -->
-<svg style="display:none" xmlns="http://www.w3.org/2000/svg">
-  <symbol id="yt" viewBox="0 0 24 24"><path fill="currentColor" d="M23.5 6.2a3 3 0 0 0-2.1-2.1C19.5 3.6 12 3.6 12 3.6s-7.5 0-9.4.5A3 3 0 0 0 .5 6.2 31 31 0 0 0 0 12a31 31 0 0 0 .5 5.8 3 3 0 0 0 2.1 2.1c1.9.5 9.4.5 9.4.5s7.5 0 9.4-.5a3 3 0 0 0 2.1-2.1A31 31 0 0 0 24 12a31 31 0 0 0-.5-5.8ZM9.6 15.5V8.5l6.4 3.5Z"/></symbol>
-  <symbol id="sp" viewBox="0 0 24 24"><path fill="currentColor" d="M12 0C5.4 0 0 5.4 0 12s5.4 12 12 12 12-5.4 12-12S18.6 0 12 0Z"/></symbol>
-  <symbol id="ig" viewBox="0 0 24 24"><path fill="currentColor" d="M12 2.2c3.2 0 3.6 0 4.8.1 1.2.1 2 .3 2.5.5.6.2 1 .5 1.5 1 .5.5.8.9 1 1.5.2.5.4 1.3.5 2.5.1 1.2.1 1.6.1 4.8s0 3.6-.1 4.8c-.1 1.2-.3 2-.5 2.5-.2.6-.5 1-.9 1.5-.5.5-.9.8-1.5 1-.5.2-1.3.4-2.5.5-1.2.1-1.6.1-4.8.1s-3.6 0-4.8-.1c-1.2-.1-2-.3-2.5-.5-.6-.2-1-.5-1.5-1-.5-.5-.8-.9-1-1.5-.2-.5-.4-1.3-.5-2.5-.1-1.2-.1-1.6-.1-4.8s0-3.6.1-4.8c.1-1.2.3-2 .5-2.5.2-.6.5-1 .9-1.5.5-.5.9-.8 1.5-1 .5-.2 1.3-.4 2.5-.5 1.2-.1 1.6-.1 4.8-.1Z"/></symbol>
-  <symbol id="fb" viewBox="0 0 24 24"><path fill="currentColor" d="M24 12a12 12 0 1 0-13.9 11.9v-8.4H7.1V12h3V9.4c0-3 1.8-4.7 4.5-4.7 1.3 0 2.6.2 2.6.2v2.9h-1.5c-1.5 0-2 .9-2 1.9V12h3.4l-.5 3.5h-2.9v8.4A12 12 0 0 0 24 12Z"/></symbol>
-  <symbol id="dc" viewBox="0 0 24 24"><path fill="currentColor" d="M20.3 4.6a19.8 19.8 0 0 0-4.9-1.5l-.2.4a18.4 18.4 0 0 1 4.4 1.4c-3.9-1.8-7.8-1.8-11.6 0a18.4 18.4 0 0 1 4.4-1.4l-.2-.4a19.8 19.8 0 0 0-4.9 1.5C3.9 9.2 3.1 13.8 3.5 18.3a19.9 19.9 0 0 0 5.9 3l.7-1a12.4 12.4 0 0 1-3.6-1.7c4.3 2.2 9.5 2.2 13.8 0a12.4 12.4 0 0 1-3.6 1.7l.7 1a19.9 19.9 0 0 0 5.9-3c.4-4.5-.4-9.1-2.8-13.7Z"/></symbol>
-</svg>
-
-<div class="wrap">
-  <header class="top">
-    <div class="brand">
-      <img src="./avatar.png">
-      <b>Pumba / Iqbal Hossain</b>
-    </div>
-    <nav>
-      <a href="#about">About</a>
-      <a href="#business">Business</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
-
-  <section class="hero">
-    <div class="heroInner">
+<div class="links">
+  <!-- Spotify -->
+  <div class="linkRow">
+    <div class="left">
+      <span class="icon" aria-hidden="true">
+        <!-- Spotify SVG -->
+        <svg viewBox="0 0 24 24" fill="none">
+          <path fill="currentColor" d="M12 1.8a10.2 10.2 0 1 0 0 20.4A10.2 10.2 0 0 0 12 1.8Zm4.73 14.65a.9.9 0 0 1-1.24.3c-3.4-2.08-7.68-2.55-12.7-1.4a.9.9 0 0 1-.4-1.76c5.46-1.25 10.16-.7 13.98 1.64.43.26.56.81.3 1.22Zm1.2-2.75a1 1 0 0 1-1.37.33c-3.9-2.4-9.84-3.1-14.45-1.7a1 1 0 1 1-.6-1.9c5.28-1.66 11.82-.88 16.28 1.86.47.29.62.9.33 1.41Zm.1-2.86c-4.67-2.77-12.38-3.02-16.84-1.67a1.1 1.1 0 0 1-.64-2.1c5.12-1.55 13.63-1.25 19.02 1.95a1.1 1.1 0 1 1-1.54 1.82Z"/>
+        </svg>
+      </span>
       <div>
-        <div class="chips">
-          <span class="chip">Discord: pumba_008</span>
-          <span class="chip">Quality over quantity</span>
-          <span class="chip">700+ subs · 225K+ views</span>
-        </div>
-
-        <h1>Shadow. Steel. <span class="accent">Presence.</span></h1>
-
-        <p>
-          I’m <b>Pumba</b> — a chill, logical creator focused on
-          <b>style, mood, pacing, and clean timing</b>.
-          I make FPS edits, montages, highlights, Shorts, and anime edits.
-        </p>
-
-        <div class="actions">
-          <a class="btn primary youtube" href="https://youtube.com/@editsenpaisan" target="_blank">
-            <span class="icon"><svg><use href="#yt"/></svg></span> YouTube
-          </a>
-          <a class="btn">Work with me</a>
-        </div>
-      </div>
-
-      <div>
-        <div class="linkRow spotify">
-          <span class="icon"><svg><use href="#sp"/></svg></span>
-          <a href="https://open.spotify.com/user/31mmiudwvwcxrk666p6rb3grse3m" target="_blank">Spotify</a>
-        </div>
-
-        <div class="linkRow instagram">
-          <span class="icon"><svg><use href="#ig"/></svg></span>
-          <a href="https://www.instagram.com/_iqbal_hossain__/" target="_blank">Instagram</a>
-        </div>
-
-        <div class="linkRow facebook">
-          <span class="icon"><svg><use href="#fb"/></svg></span>
-          <a href="https://www.facebook.com/profile.php?id=100087091683993" target="_blank">Facebook</a>
-        </div>
-
-        <div class="linkRow discord copy" onclick="copyDiscord()">
-          <span class="icon"><svg><use href="#dc"/></svg></span>
-          <span id="dcText">pumba_008</span>
-        </div>
+        <b>Spotify</b>
+        <small>My profile</small>
       </div>
     </div>
-  </section>
+    <a class="go" href="https://open.spotify.com/user/31mmiudwvwcxrk666p6rb3grse3m?si=f79b29033cfc40ad" target="_blank" rel="noopener noreferrer">Open →</a>
+  </div>
 
-  <footer>© <span id="y"></span> Pumba</footer>
+  <!-- Instagram -->
+  <div class="linkRow">
+    <div class="left">
+      <span class="icon" aria-hidden="true">
+        <!-- Instagram SVG -->
+        <svg viewBox="0 0 24 24" fill="none">
+          <path fill="currentColor" d="M7.5 2.7h9A4.8 4.8 0 0 1 21.3 7.5v9a4.8 4.8 0 0 1-4.8 4.8h-9A4.8 4.8 0 0 1 2.7 16.5v-9A4.8 4.8 0 0 1 7.5 2.7Zm0 1.8A3 3 0 0 0 4.5 7.5v9a3 3 0 0 0 3 3h9a3 3 0 0 0 3-3v-9a3 3 0 0 0-3-3h-9Zm10.2 1.65a.9.9 0 1 1 0 1.8.9.9 0 0 1 0-1.8ZM12 7.2a4.8 4.8 0 1 1 0 9.6 4.8 4.8 0 0 1 0-9.6Zm0 1.8a3 3 0 1 0 0 6 3 3 0 0 0 0-6Z"/>
+        </svg>
+      </span>
+      <div>
+        <b>Instagram</b>
+        <small>@_iqbal_hossain__</small>
+      </div>
+    </div>
+    <a class="go" href="https://www.instagram.com/_iqbal_hossain__/" target="_blank" rel="noopener noreferrer">Visit →</a>
+  </div>
+
+  <!-- Facebook -->
+  <div class="linkRow">
+    <div class="left">
+      <span class="icon" aria-hidden="true">
+        <!-- Facebook SVG -->
+        <svg viewBox="0 0 24 24" fill="none">
+          <path fill="currentColor" d="M12 1.8a10.2 10.2 0 1 0 0 20.4 10.2 10.2 0 0 0 0-20.4Zm1.35 18.35v-6.2h2.05l.35-2.35h-2.4V10.1c0-.68.2-1.15 1.18-1.15h1.35V6.88c-.23-.03-1.02-.1-1.95-.1-1.93 0-3.25 1.18-3.25 3.35v1.47H8.55v2.35h2.08v6.2a8.5 8.5 0 0 1-1.67-.48A8.4 8.4 0 1 1 13.35 20.15Z"/>
+        </svg>
+      </span>
+      <div>
+        <b>Facebook</b>
+        <small>Profile</small>
+      </div>
+    </div>
+    <a class="go" href="https://www.facebook.com/profile.php?id=100087091683993" target="_blank" rel="noopener noreferrer">Open →</a>
+  </div>
+
+  <!-- Discord -->
+  <div class="linkRow">
+    <div class="left">
+      <span class="icon" aria-hidden="true">
+        <!-- Discord SVG -->
+        <svg viewBox="0 0 24 24" fill="none">
+          <path fill="currentColor" d="M16.9 6.4a11.1 11.1 0 0 0-2.8-.9l-.3.6a10.5 10.5 0 0 0-3.6 0l-.3-.6c-1 .2-2 .5-2.8.9-1.8 2.7-2.3 5.4-2 8.1a11.4 11.4 0 0 0 3.6 1.8l.5-.8c-.6-.2-1.1-.5-1.6-.9l.4-.3c1.9.9 4.1.9 6 0l.4.3c-.5.4-1 .7-1.6.9l.5.8a11.4 11.4 0 0 0 3.6-1.8c.4-2.9-.4-5.6-2-8.1ZM9.4 13.7c-.6 0-1-.6-1-1.2s.4-1.2 1-1.2 1 .6 1 1.2-.4 1.2-1 1.2Zm5.2 0c-.6 0-1-.6-1-1.2s.4-1.2 1-1.2 1 .6 1 1.2-.4 1.2-1 1.2Z"/>
+        </svg>
+      </span>
+      <div>
+        <b>Discord</b>
+        <small>pumba_008</small>
+      </div>
+    </div>
+    <span class="go" title="Copy manually">pumba_008</span>
+  </div>
 </div>
 
-<script>
-  document.getElementById("y").textContent = new Date().getFullYear();
-  function copyDiscord(){
-    navigator.clipboard.writeText("pumba_008");
-    document.getElementById("dcText").textContent="Copied!";
-    setTimeout(()=>document.getElementById("dcText").textContent="pumba_008",1200);
-  }
-</script>
-
-</body>
-</html>
